# PublicDataReader

./: README.md  pyproject.toml
Archive/: 착공_Sample.ipynb
Data/: KB_전세가율.csv
KB/: KB_전세가율.ipynb  KB_전세가율.py
PublicData/: 미분양.ipynb  미분양.py  미분양_종합.ipynb  미분양_종합.py  미분양현황_피벗_전체기간_최종.csv  준공_후_미분양.ipynb  착공.ipynb  착공.py
